@@ -63,6 +63,8 @@
    - ofaMysqlConnect: migrate to G_ADD_PRIVATE (todo #994).
    - ofaMysqlEditorDisplay: migrate to G_ADD_PRIVATE (todo #994).
    - ofaMysqlEditorDisplay: migrate to GResource (todo #826).
+   - ofaMysqlEditorEnter: migrate to G_ADD_PRIVATE (todo #994).
+   - ofaMysqlEditorEnter: migrate to GResource (todo #826).
    - ofaPlugin: migrate to G_ADD_PRIVATE (todo #994).
    - ofaPReferences: move user interface to GResource (todo #826).
    - ofaPreferences: migrate to G_ADD_PRIVATE (todo #994).
